<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DSV3_BarcodeRegistration" Id="{3ba85eb5-b8cf-4d20-be2a-7620cdf69cd1}">
    <Declaration><![CDATA[TYPE DSV3_BarcodeRegistration :
STRUCT

	sBarcodeRegistered															 : STRING(99);
	iLinkProductRecipeNo															 : INT;
	bBarcodeRegistrationEn 														 : BOOL;
	sLinkProductRecipeDescription													 : STRING(99);

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>